# SPDX-License-Identifier: Apache-2.0

# Feature to enable hostboot dump collection when watchdog times out
option('hostboot-dump-collection',
       type: 'feature',
       value: 'disabled',
       description : 'Enables hostboot dump collection')

# The options and values for dump collection
option('OP_DUMP_OBJPATH', type : 'string',
        value : '/org/openpower/dump',
        description : 'The D-Bus root of openpower-dump-collector')

option('OP_DUMP_BUSNAME', type : 'string',
        value : 'org.open_power.Dump.Manager',
        description : 'The bus name of openpower-dump-collector')

# Hostboot dump options
option('HB_DUMP_DBUS_OBJPATH', type : 'string',
        value : '/xyz/openbmc_project/dump/hostboot',
        description : 'The hostboot dump manager path')

option('HB_DUMP_COLLECTION_PATH', type : 'string',
        value : '/tmp/openpower-dumps/hostboot',
        description : 'The path to store collected hostboot dump files')

# Hardware dump options
option('HW_DUMP_DBUS_OBJPATH', type : 'string',
        value : '/xyz/openbmc_project/dump/hardware',
        description : 'The hardware dump manager path')

option('HW_DUMP_COLLECTION_PATH', type : 'string',
        value : '/tmp/openpower-dumps/hardware',
        description : 'The path to store collected hardware dump files')

# SBE dump options
option('SBE_DUMP_DBUS_OBJPATH', type : 'string',
        value : '/xyz/openbmc_project/dump/sbe',
        description : 'The SBE dump manager path')

option('SBE_DUMP_COLLECTION_PATH', type : 'string',
        value : '/tmp/openpower-dumps/sbe',
        description : 'The path to store collected SBE dump files')

# Feature to enable the dump collection
option('dump-collection', type: 'feature',
       value : 'disabled',
       description : 'Enables dump collection')
