# SPDX-License-Identifier: Apache-2.0

# Feature to enable hostboot dump collection when watchdog times out
option('hostboot-dump-collection',
       type: 'feature',
       value: 'disabled',
       description : 'Enables hostboot dump collection')

# The options and values for dump collection
option('OP_DUMP_OBJPATH', type : 'string',
        value : '/org/openpower/dump',
        description : 'The D-Bus root of openpower-dump-collector')

option('OP_DUMP_BUSNAME', type : 'string',
        value : 'org.open_power.Dump.Manager',
        description : 'The bus name of openpower-dump-collector')

# Feature to enable the dump collection
option('dump-collection', type: 'feature',
       value : 'disabled',
       description : 'Enables dump collection')
