# SPDX-License-Identifier: Apache-2.0

scripts_to_install_pluginsdir += meson.current_source_dir() / 'badpel'
scripts_to_install_pluginsdir += meson.current_source_dir() / 'cfam'
scripts_to_install_pluginsdir += meson.current_source_dir() / 'dumpfilelist'
scripts_to_install_pluginsdir += meson.current_source_dir() / 'guardlist'
scripts_to_install_pluginsdir += meson.current_source_dir() / 'obmcconsole1'
scripts_to_install_pluginsdir += meson.current_source_dir() / 'occ'
scripts_to_install_pluginsdir += meson.current_source_dir() / 'pels'
scripts_to_install_pluginsdir += meson.current_source_dir() / 'phal_devtree'
scripts_to_install_pluginsdir += meson.current_source_dir() / 'vpd_data'
