# SPDX-License-Identifier: Apache-2.0

plugins_to_install += meson.current_source_dir() / 'badpel'
plugins_to_install += meson.current_source_dir() / 'cfam'
plugins_to_install += meson.current_source_dir() / 'dumpfilelist'
plugins_to_install += meson.current_source_dir() / 'guardlist'
plugins_to_install += meson.current_source_dir() / 'obmcconsole1'
plugins_to_install += meson.current_source_dir() / 'occ'
plugins_to_install += meson.current_source_dir() / 'pels'
plugins_to_install += meson.current_source_dir() / 'phal_devtree'
plugins_to_install += meson.current_source_dir() / 'vpd_data'
plugins_to_install += meson.current_source_dir() / 'faultlog'
